--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==1.24.4
 packaging==24.1
 pandas==1.5.3
 pluggy==1.5.0
+libpq-dev
 psycopg2-binary
 pytest==8.3.2
 python-dateutil==2.9.0.post0
