--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,24 +17,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+     
       - name: Install system dependencies
         run: |
-            sudo apt-get update
-            sudo apt-get install -y libpq-dev  # Install libpq-dev here
+          sudo apt-get update
+          sudo apt-get install -y libpq-dev  # Ensure this is installed
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: '3.8'
 
       - name: Install Python dependencies
         run: |
           pip install --upgrade --force-reinstall -r requirements.txt
 
-
       - name: Verify installed packages
         run: |
           pip list
+
+      - name: Test psycopg2 import
+        run: |
+          python -c "import psycopg2"
+
 
 
       - name: Run unit tests
