--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-psycopg2-binary==2.9.6
-pandas==1.5.3
-SQLAlchemy==2.0.32
-python-dotenv==1.0.0
+psycopg2-binary>=2.9.6
 numpy==1.24.4
+packaging==24.1
+pandas==1.5.3
+pluggy==1.5.0
 pytest==8.3.2
-python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+SQLAlchemy==2.0.32
+python-dateutil==2.9.0
+
 
 
 
