--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-psycopg2-binary>=2.9.6
+psycopg2-binary==2.9.6
 numpy==1.24.4
 packaging==24.1
 pandas==1.5.3
@@ -6,7 +6,7 @@ pluggy==1.5.0
 pytest==8.3.2
 python-dotenv==1.0.0
 SQLAlchemy==2.0.32
-python-dateutil==2.9.0
+
 
 
 
