--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-numpy             2.1.0
-packaging         24.1
-pandas            2.2.2
-pip               24.0
-pluggy            1.5.0
-psycopg2-binary   2.9.9
-pytest            8.3.2
-python-dateutil   2.9.0.post0
-pytz              2024.1
-six               1.16.0
-SQLAlchemy        2.0.32
-typing_extensions 4.12.2
-tzdata            2024.1
+colorama==0.4.6
+greenlet==3.0.3
+iniconfig==2.0.0
+numpy==2.1.0
+packaging==24.1
+pandas==2.2.2
+pluggy==1.5.0
+psycopg2-binary==2.9.9
+pytest==8.3.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six==1.16.0
+SQLAlchemy==2.0.32
+typing_extensions==4.12.2
+tzdata==2024.1
+
 
 
 
