--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,7 +42,9 @@ jobs:
 
 
 
-      - name: Run unit tests
+      - name: Run tests
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
         run: |
           python -m unittest discover -s tests -p "*.py"
 
@@ -56,7 +58,8 @@ jobs:
       - name: Set up PostgreSQL
         uses: harmon758/postgresql-action@v1
         with:
-          postgresql version: '16'
+          postgresql-version: '16'
+
 
       - name: Load data to database
         env:
