--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -69,6 +69,16 @@ jobs:
         run: |
           python scripts/main.py
 
+      - name: Run data_quality_rules_functions
+        env:
+          PGHOST: "${{ secrets.PG_HOST }}"
+          PGDATABASE: "${{ secrets.PG_DB }}"
+          PGUSER: "${{ secrets.PG_USER }}"
+          PGPASSWORD: "${{ secrets.PG_PASSWORD }}"
+          DATABASE_URL: postgres://${{ secrets.PG_USER }}:${{ secrets.PG_PASSWORD }}@${{ secrets.PG_HOST }}:5432/${{ secrets.PG_DB }}
+        run: |
+          psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f data_quality_rules.sql
+
       - name: Run stored procedures
         env:
           PGHOST: "${{ secrets.PG_HOST }}"
