--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,25 +9,35 @@ on:
     branches:
       - main
 
-
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-     
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libpq-dev  # Ensure this is installed
+          sudo apt-get install -y libpq-dev
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.12.4'
-          
+
       - name: Install Python dependencies
         run: |
           pip install --upgrade --force-reinstall -r requirements.txt
@@ -37,51 +47,25 @@ jobs:
           pip list
 
       - name: Run tests
-    services:
-      # Label used to access the service container
-          postgres:
-        # Docker Hub image
-            image: postgres
-        # Provide the password for postgres
-            env:
-              POSTGRES_PASSWORD: postgres
-        # Set health checks to wait until postgres has started
-            options: >-
-              --health-cmd pg_isready
-              --health-interval 10s
-              --health-timeout 5s
-              --health-retries 5
-            ports:
-          # Maps tcp port 5432 on service container to the host
-              - 5432:5432
-       # Service containers to run with `runner-job`
-
-    env:
-        DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
         run: |
           python -m unittest discover -s tests -p "*.py"
 
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
-
-     # Service containers to run with `runner-job`
     services:
-      # Label used to access the service container
       postgres:
-        # Docker Hub image
         image: postgres
-        # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: "${{ secrets.PG_PASSWORD }}"
-        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
         ports:
-          # Maps tcp port 5432 on service container to the host
           - 5432:5432
     steps:
       - name: Checkout code
@@ -90,9 +74,6 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install --upgrade --force-reinstall -r requirements.txt
-
-      
-          
 
       - name: Run data_quality_rules_functions
         env:
@@ -103,7 +84,7 @@ jobs:
           DATABASE_URL: postgres://${{ secrets.PG_USER }}:${{ secrets.PG_PASSWORD }}@${{ secrets.PG_HOST }}:5432/${{ secrets.PG_DB }}
         run: |
           psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f data_quality_rules.sql
-          
+
       - name: Load data to database
         env:
           PGHOST: "${{ secrets.PG_HOST }}"
@@ -113,8 +94,6 @@ jobs:
           DATABASE_URL: postgres://${{ secrets.PG_USER }}:${{ secrets.PG_PASSWORD }}@${{ secrets.PG_HOST }}:5432/${{ secrets.PG_DB }}
         run: |
           python scripts/main.py
-
-     
 
       - name: Run stored procedures
         env:
