--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-  pull_request:
-    branches:
-      - main
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -16,7 +12,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: "${{ secrets.PG_PASSWORD }}"
+          POSTGRES_PASSWORD: postgres  # Default postgres password
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -24,49 +20,7 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libpq-dev
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.12.4'
-
-      - name: Install Python dependencies
-        run: |
-          pip install --upgrade --force-reinstall -r requirements.txt
-
-      - name: Verify installed packages
-        run: |
-          pip list
-
-      - name: Run tests
-        env:
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/${{ secrets.PG_DB }}
-        run: |
-          python -m unittest discover -s tests -p "*.py"
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: "${{ secrets.PG_PASSWORD }}"
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -74,35 +28,46 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install --upgrade --force-reinstall -r requirements.txt
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for PostgreSQL to be ready..."
+            sleep 1
+          done
+
+      - name: Create Database
+        env:
+          PGPASSWORD: postgres
+        run: |
+          psql -h localhost -U postgres -c "CREATE DATABASE nycpayroll;"  # Creates the 'mydatabase' database
 
       - name: Run data_quality_rules_functions
         env:
-          PGHOST: "${{ secrets.PG_HOST }}"
-          PGDATABASE: "${{ secrets.PG_DB }}"
-          PGUSER: "${{ secrets.PG_USER }}"
-          PGPASSWORD: "${{ secrets.PG_PASSWORD }}"
-          DATABASE_URL: postgres://${{ secrets.PG_USER }}:${{ secrets.PG_PASSWORD }}@${{ secrets.PG_HOST }}:5432/${{ secrets.PG_DB }}
+          PGHOST: localhost
+          PGDATABASE: nycpayroll
+          PGUSER: postgres
+          PGPASSWORD: postgres
         run: |
           psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f data_quality_rules.sql
-
+          
       - name: Load data to database
         env:
-          PGHOST: "${{ secrets.PG_HOST }}"
-          PGDATABASE: "${{ secrets.PG_DB }}"
-          PGUSER: "${{ secrets.PG_USER }}"
-          PGPASSWORD: "${{ secrets.PG_PASSWORD }}"
-          DATABASE_URL: postgres://${{ secrets.PG_USER }}:${{ secrets.PG_PASSWORD }}@${{ secrets.PG_HOST }}:5432/${{ secrets.PG_DB }}
+          PGHOST: localhost
+          PGDATABASE: nycpayroll
+          PGUSER: postgres
+          PGPASSWORD: postgres
         run: |
           python scripts/main.py
 
       - name: Run stored procedures
         env:
-          PGHOST: "${{ secrets.PG_HOST }}"
-          PGDATABASE: "${{ secrets.PG_DB }}"
-          PGUSER: "${{ secrets.PG_USER }}"
-          PGPASSWORD: "${{ secrets.PG_PASSWORD }}"
-          DATABASE_URL: postgres://${{ secrets.PG_USER }}:${{ secrets.PG_PASSWORD }}@${{ secrets.PG_HOST }}:5432/${{ secrets.PG_DB }}
+          PGHOST: localhost
+          PGDATABASE: nycpayroll
+          PGUSER: postgres
+          PGPASSWORD: postgres
         run: |
           psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f proc_data_warehouse.sql
           psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f procedure_datawarehouse.sql
+
 
