--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -12,7 +16,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: postgres  # Default postgres password
+          POSTGRES_PASSWORD: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -20,7 +24,51 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libpq-dev
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12.4'
+
+      - name: Install Python dependencies
+        run: |
+          pip install --upgrade --force-reinstall -r requirements.txt
+
+      - name: Verify installed packages
+        run: |
+          pip list
+
+      - name: Run tests
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+        run: |
+          python -m unittest discover -s tests -p "*.py"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+        volumes:
+          - ./pgdata:/var/lib/postgresql/data
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -40,7 +88,7 @@ jobs:
         env:
           PGPASSWORD: postgres
         run: |
-          psql -h localhost -U postgres -c "CREATE DATABASE nycpayroll;"  # Creates the 'mydatabase' database
+          psql -h localhost -U postgres -c "CREATE DATABASE nycpayroll;"  # Creates the 'nycpayroll' database
 
       - name: Run data_quality_rules_functions
         env:
@@ -50,7 +98,7 @@ jobs:
           PGPASSWORD: postgres
         run: |
           psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f data_quality_rules.sql
-          
+
       - name: Load data to database
         env:
           PGHOST: localhost
@@ -69,5 +117,3 @@ jobs:
         run: |
           psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f proc_data_warehouse.sql
           psql -h $PGHOST -d $PGDATABASE -U $PGUSER -f procedure_datawarehouse.sql
-
-
