--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,8 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+        volumes:
+          - ./pgdata:/var/lib/postgresql/data
 
     steps:
       - name: Checkout code
