--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Add a step to change ownership of pgdata if it exists
+      - name: Change ownership of pgdata
+        run: |
+          if [ -d "/home/runner/work/nyc_payroll/nyc_payroll/pgdata" ]; then
+            sudo chown -R $USER:$USER /home/runner/work/nyc_payroll/nyc_payroll/pgdata
+          fi
+
+      # Safely remove the pgdata directory if needed
+      - name: Remove pgdata directory
+        run: |
+          if [ -d "/home/runner/work/nyc_payroll/nyc_payroll/pgdata" ]; then
+            sudo rm -rf /home/runner/work/nyc_payroll/nyc_payroll/pgdata
+          fi
+
       - name: Install system dependencies
         run: |
           sudo apt-get update
@@ -45,10 +59,6 @@ jobs:
         run: |
           pip install --upgrade --force-reinstall -r requirements.txt
 
-      
-      - name: Change ownership of pgdata
-        run: |
-              sudo chown -R $USER:$USER /home/runner/work/nyc_payroll/nyc_payroll/pgdata
 
       - name: Verify installed packages
         run: |
