--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -89,6 +89,20 @@ jobs:
         volumes:
           - ./pgdata:/var/lib/postgresql/data
     steps:
+       # Add a step to change ownership of pgdata if it exists
+      - name: Change ownership of pgdata
+        run: |
+          if [ -d "/home/runner/work/nyc_payroll/nyc_payroll/pgdata" ]; then
+            sudo chown -R $USER:$USER /home/runner/work/nyc_payroll/nyc_payroll/pgdata
+          fi
+
+      # Safely remove the pgdata directory if needed
+      - name: Remove pgdata directory
+        run: |
+          if [ -d "/home/runner/work/nyc_payroll/nyc_payroll/pgdata" ]; then
+            sudo rm -rf /home/runner/work/nyc_payroll/nyc_payroll/pgdata
+          fi
+
       - name: Checkout code
         uses: actions/checkout@v2
 
